--- a/src/assets/styles/cmps/_app-hero.scss
+++ b/src/assets/styles/cmps/_app-hero.scss
@@ -4,8 +4,9 @@
   justify-content: center;
   align-items: center;
   background-image: url('../../img/heroBackground.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-repeat: round;
+  // background-repeat: no-repeat;
+  // background-size: cover;
   height: 325px;
   gap: 20px;
   
@@ -14,6 +15,7 @@
     font-family: 'Righteous';
     color: white;
     text-shadow: 0 0 3px #fe6b02, 0 0 3px #fe6b02, 0 0 3px #fe6b02, 0 0 3px #fe6b02;
+    text-align: center;
   }
   
   & .show-search-main-container {
@@ -26,6 +28,7 @@
       background-color: #141414;
       padding: 1.1rem 1rem 1.1rem 1.5rem;
       width: calc(100% - 38rem);
+      min-width: 280px;
       border-bottom-left-radius: 10px;
       border-top-left-radius: 10px;
       border: none;
