--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -20,6 +20,7 @@
 @import './cmps/app-header';
 @import './cmps/app-hero';
 @import './cmps/app-footer';
+@import './cmps/scroll-up-btn';
 
 
 // Pages
