--- a/src/assets/styles/pages/_app-home.scss
+++ b/src/assets/styles/pages/_app-home.scss
@@ -51,16 +51,24 @@
     }
   }
   .show-list-container {
+    position: relative;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 304.5px));
+    // grid-template-columns: repeat(auto-fit, minmax(250px, 304.5px));
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 15px;
     background-color: #050811f5;
     padding-bottom: 80px;
-    min-height: 55vh;
+    min-height: 60vh;
+
+    & > h2{
+      position: absolute;
+      width: 100%;
+    }
     & .show-preview-container {
       position: relative;
-      background-repeat: no-repeat;
-      background-size: cover;
+      // background-repeat: no-repeat;
+      // background-size: cover;
+      background-repeat: round;
       height: 450px;
       border-radius: 5px;
       transition: all 0.3s;
@@ -123,22 +131,89 @@
   //   font-size: 14px;
   // }
 }
-@media (max-width: 1520px) {
+@media (max-width: 1600px) {
   .main-header-container{
     padding-inline-start: 15rem;
     padding-inline-end: 15rem;
   }
   .main-layout:not(.main-header-container){
-    padding: 2rem 15rem;
+    padding: 1.8rem 15rem;
   }
   .main-home-container {
   & .main-category-filter-container {
     & .next-page-btn {
       margin-right: 13rem;
     }
+    & .prev-page-btn {
+      margin-left: 13rem;
+    }
   }
 }
   // html{
   //   font-size: 14px;
   // }
+}
+@media (max-width: 1300px) {
+  .main-header-container{
+    padding-inline-start: 10rem;
+    padding-inline-end: 10rem;
+  }
+  .main-layout:not(.main-header-container){
+    padding: 1rem 10rem;
+  }
+  .main-home-container {
+  & .main-category-filter-container {
+    & .next-page-btn {
+      margin-right: 8rem;
+    }
+    & .prev-page-btn {
+      margin-left: 8rem;
+    }
+  }
+}
+}
+
+@media (max-width: 1150px) {
+  html{
+    font-size: 14px;
+  }
+  
+}
+@media (max-width: 1000px) {
+  .main-header-container{
+    padding-inline-start: 0.5rem;
+    padding-inline-end: 0.5rem;
+  }
+  .main-layout:not(.main-header-container){
+    padding: 1rem 1rem;
+  }
+  .main-home-container {
+  & .main-category-filter-container {
+    & .next-page-btn {
+      margin-right: 0.5rem;
+    }
+    & .prev-page-btn {
+      margin-left: 0.5rem;
+    }
+  }
+}
+}
+@media (max-width: 750px) {
+//   .main-header-container{
+//     padding-inline-start: 0.5rem;
+//     padding-inline-end: 0.5rem;
+//   }
+//   .main-layout:not(.main-header-container){
+//     padding: 1rem 1rem;
+//   }
+//   .main-home-container {
+//   & .main-category-filter-container {
+//     & .next-page-btn {
+//       margin-right: 0.5rem;
+//     }
+//     & .prev-page-btn {
+//       margin-left: 0.5rem;
+//     }
+//   }
+// }
 }
