--- a/src/assets/styles/pages/_app-watchlist.scss
+++ b/src/assets/styles/pages/_app-watchlist.scss
@@ -1,57 +1,67 @@
-.main-app-watchlist-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 100px;
-    min-height: 100vh;
-    color: white;
-    font-family: "Righteous";
-    background-color: rgba(5, 8, 17, 0.9607843137);
+.main-app-watchlist-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 100px;
+  min-height: 100vh;
+  color: white;
+  font-family: "Righteous";
+  background-color: rgba(5, 8, 17, 0.9607843137);
+  gap: 20px;
 
-    & > .show-list-container {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 304.5px));
-        gap: 15px;
-        padding-bottom: 80px;
-        height: 100%;
+  & > h3 {
+    color: white;
+    font-family: "Oswald";
+  }
+
+  & > .show-list-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 15px;
+    padding-bottom: 80px;
+    height: 100%;
+    width: 100%;
+
+    & .show-preview-container {
+      position: relative;
+      background-repeat: no-repeat;
+      background-size: cover;
+      height: 450px;
+      border-radius: 5px;
+      transition: all 0.3s;
+      cursor: pointer;
+      &:hover {
+        opacity: 0.7;
+        transform: scale(1.03);
+      }
+
+      & .show-preview-details {
+        position: absolute;
+        bottom: 0;
+        color: white;
         width: 100%;
-        background-color: rgba(5, 8, 17, 0.9607843137);
-        & .show-preview-container {
-          position: relative;
-          background-repeat: no-repeat;
-          background-size: cover;
-          height: 450px;
-          border-radius: 5px;
-          transition: all 0.3s;
-          cursor: pointer;
-          &:hover {
-            opacity: 0.7;
-            transform: scale(1.03);
-          }
-    
-          & .show-preview-details {
-            position: absolute;
-            bottom: 0;
-            color: white;
-            width: 100%;
-            padding: 15px;
-            & > p {
-              font-family: sans-serif;
-            }
-            & > h2 {
-              font-family: 'Oswald';
-            }
-            & > span {
-              color: #a5a5a5;
-              font-family: 'Oswald';
-            }
-          }
+        padding: 15px;
+        & > p {
+          font-family: sans-serif;
         }
-    
-        & > h2{
-          color: white;
-          font-family: 'Oswald';
-          text-align: center;
+        & > h2 {
+          font-family: "Oswald";
+        }
+        & > span {
+          color: #a5a5a5;
+          font-family: "Oswald";
         }
       }
+    }
+  }
+
+  & > .loader-container {
+    height: 50px;
+    width: 50px;
+    margin-top: 80px;
+    & > img {
+      height: 100%;
+      width: 100%;
+    }
+  }
 }
