Mui link component with href didnt work well with Hashrouter, replaced with onClick func that gets a path and nav to it

--- a/src/assets/styles/pages/_sign-in.scss
+++ b/src/assets/styles/pages/_sign-in.scss
@@ -13,3 +13,11 @@
         background-color: #ff9500;
     }
 }
+
+.MuiGrid-root.MuiGrid-container{
+    & > .MuiGrid-root.MuiGrid-item{
+        & > a {
+            cursor: pointer;
+        }
+    }
+} 
