Added cursor pointer to swiper-slide div to fix iphone not firing onclick events

--- a/src/assets/styles/pages/_show-details.scss
+++ b/src/assets/styles/pages/_show-details.scss
@@ -165,10 +165,10 @@
 
             & .swiper-slide {
               min-width: 250px;
-              & > * {
+              cursor: pointer;
+              & > .show-preview-container {
                 border-radius: 5px;
                 height: 100%;
-                cursor: pointer;
                 background-repeat: round;
 
                 & .show-preview-details {
