Added cursor pointer

--- a/src/assets/styles/pages/_show-details.scss
+++ b/src/assets/styles/pages/_show-details.scss
@@ -170,6 +170,7 @@
                 border-radius: 5px;
                 height: 100%;
                 background-repeat: round;
+                cursor: pointer;
 
                 & .show-preview-details {
                   position: absolute;
