--- a/src/assets/styles/pages/_show-details.scss
+++ b/src/assets/styles/pages/_show-details.scss
@@ -159,6 +159,7 @@
           width: 100%;
           left: 50%;
           transform: translateX(-50%);
+          z-index: 100;
           & .swiper-wrapper {
             height: 425px;
             padding-bottom: 60px;
