--- a/src/assets/styles/pages/_show-details.scss
+++ b/src/assets/styles/pages/_show-details.scss
@@ -40,7 +40,7 @@
         & .show-img-container {
           max-height: 450px;
           max-width: 350px;
-          min-width: 350px;
+          min-width: 300px;
           flex-basis: 50%;
           & > img {
             height: 100%;
@@ -252,6 +252,20 @@
                 width: 100%;
               }
             }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 400px) {
+  .main-details-container {
+    & .details-container {
+      & .show-details-container {
+        & .show-actor-container {
+          & .show-actor-list {
+            grid-template-columns: repeat(auto-fill,minmax(140px,1fr));
           }
         }
       }
