--- a/src/assets/styles/pages/_show-details.scss
+++ b/src/assets/styles/pages/_show-details.scss
@@ -139,6 +139,7 @@
               width: 100%;
               max-height: 185px;
               border-radius: 3px;
+              object-fit: cover;
             }
             & > .actor-info-container {
               padding-top: 10px;
