--- a/src/assets/styles/pages/_app-home.scss
+++ b/src/assets/styles/pages/_app-home.scss
@@ -57,7 +57,7 @@
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 15px;
     background-color: #050811f5;
-    padding-bottom: 80px;
+    padding-bottom: 80px !important;
     min-height: 60vh;
 
     & > h2 {
